# Named_Entity_Recognition

./: .gitignore  Dockerfile  app.py  parser.py  pyproject.toml  requirements.txt
BERT/: README.md  ner-bert.ipynb  requirements.txt
Dataset_Generation/: README.md  config.py  main.py  pyproject.toml
Dataset_Generation/llm/: entity_llm.py
Dataset_Generation/llm/prompts/: entities_prompt.py
Dataset_Generation/pipeline/: annotate_resume.py
Dataset_Generation/schemas/: entities_schema.py
Dataset_Generation/utils/: balancing_dataset.py  check.py  clean.py  file_utils.py  parser.py  spans.py
LSTM /src/: data.py  predict.py  train.py
RNN/: pyproject.toml
RNN/src/: dataset.py  evaluate.py  model.py  predict.py  train.py  utils.py
