[project]
name = "resume-ner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "docling>=2.71.0",
    "fastapi>=0.132.0",
    "nltk>=3.9.2",
    "numpy<2",
    "python-multipart>=0.0.22",
    "torch==2.2.2",
    "transformers>=4.57.6",
    "uvicorn>=0.41.0",
]
